# packt-netops-ai-workshop

./: .gitignore  AGENTS.md  GETTING-STARTED.md  README.md  pyproject.toml  requirements.txt
lab-01-copilots/: AGENTS.md  README.md  topology.clab.yml
lab-01-copilots/ansible/: ansible.cfg  requirements.yml
lab-01-copilots/ansible/inventory/: hosts.yml
lab-01-copilots/ansible/playbooks/: 01-interfaces.yml  02-bgp.yml  03-vlans.yml  (+6 more)
lab-01-copilots/config/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
lab-01-copilots/prompts/: README.md  extend-bgp.md  extend-interfaces.md  extend-vlans.md
lab-02-mcp-server/: AGENTS.md  README.md  device_config.yml  network_mcp_server.py
lab-02-mcp-server/helpers/: __init__.py  ansible.py  constants.py
lab-02-mcp-server/prompts/: README.md  add-ansible-tools.md  add-config-backup.md  add-get-config-tool.md  add-vlan-tool.md
lab-02-mcp-server/resources/: __init__.py  topology.py
lab-02-mcp-server/tests/: test_mcp_server.py
lab-02-mcp-server/tools/: __init__.py  _template.py  add_vlan.py  backup_config.py  get_bgp_neighbors.py  get_device_info.py  get_interfaces.py  get_running_config.py  health_check.py
lab-03-observability/: AGENTS.md  Dockerfile.exporter  README.md  alerting_tools.py  docker-compose.yml  network_exporter.py
lab-03-observability/agent/: alert_analyzer.py
lab-03-observability/prometheus/: alert_rules.yml  prometheus.yml
lab-03-observability/prompts/: README.md  add-alert-analysis-tool.md  add-alert-output.md  add-alert-rules.md  add-dashboard-panel.md  add-prometheus-tools.md
scripts/: verify-setup.sh
setup/: 01-docker.md  02-arista.md  03-api-keys.md  04-python.md  05-claude-code.md  05-verification.md  06-claude-code.md  06-verification.md  README.md
showcase/: README.md
showcase/_template/: README.md
(+4 files in other folders)
